fix: overflow

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Antic', sans-serif;
-    overflow: hidden;
 }
 
 .body-port{
